--- a/.gitignore
+++ b/.gitignore
@@ -134,3 +134,74 @@ dmypy.json
 /爬虫/web逆向/day01/node_modules/
 Python's Books/Django+Vue.js 实战派Python Web开发与运维/chap08/myshop-test/app8/migrations/0003_remove_goods_user_alter_goods_createdate.py
 Python's Books/Django+Vue.js 实战派Python Web开发与运维/chap08/myshop-test/app8/migrations/0004_alter_goods_createdate.py
+Python's Books/Django+Vue.js 实战派Python Web开发与运维/chap08/myshop-api/media/goods/images/哈密大枣_4wUwEPz.jpg
+Python's Books/Django+Vue.js 实战派Python Web开发与运维/chap08/myshop-api/media/goods/images/哈密大枣_Gjsgluh.jpg
+Python's Books/Django+Vue.js 实战派Python Web开发与运维/chap08/myshop-api/media/goods/images/哈密大枣_pjCyaVR.jpg
+Python's Books/Django+Vue.js 实战派Python Web开发与运维/chap08/myshop-api/media/goods/images/哈密大枣.jpg
+Python's Books/Django+Vue.js 实战派Python Web开发与运维/chap08/myshop-api/media/goods/images/巴旦木1.jpg
+Python's Books/Django+Vue.js 实战派Python Web开发与运维/chap08/myshop-api/media/goods/images/红枣副本2.jpg
+Python's Books/Django+Vue.js 实战派Python Web开发与运维/chap08/myshop-api/media/goods/images/葡萄干1.jpg
+Python's Books/Django+Vue.js 实战派Python Web开发与运维/chap08/myshop-api/media/goods/images/黑加仑.jpg
+Python's Books/Django+Vue.js 实战派Python Web开发与运维/chap08/myshop-api/media/media/uploads/9f7a02ae_fU1btvM.jpg
+Python's Books/Django+Vue.js 实战派Python Web开发与运维/chap08/myshop-api/media/media/uploads/9f7a02ae_kdW1fY3.jpg
+Python's Books/Django+Vue.js 实战派Python Web开发与运维/chap08/myshop-api/media/media/uploads/9f7a02ae_Qda4wq3.jpg
+Python's Books/Django+Vue.js 实战派Python Web开发与运维/chap08/myshop-api/media/media/uploads/9f7a02ae_Qicu8tG.jpg
+Python's Books/Django+Vue.js 实战派Python Web开发与运维/chap08/myshop-api/media/media/uploads/9f7a02ae_SwVA0Nr.jpg
+Python's Books/Django+Vue.js 实战派Python Web开发与运维/chap08/myshop-api/media/media/uploads/9f7a02ae_XdM8s2Z.jpg
+Python's Books/Django+Vue.js 实战派Python Web开发与运维/chap08/myshop-api/media/media/uploads/9f7a02ae_Xr2bFtu.jpg
+Python's Books/Django+Vue.js 实战派Python Web开发与运维/chap08/myshop-api/media/media/uploads/9f7a02ae.jpg
+Python's Books/Django+Vue.js 实战派Python Web开发与运维/chap08/myshop-api/media/slide/20151201euxrsd.jpg
+Python's Books/Django+Vue.js 实战派Python Web开发与运维/chap08/myshop-api/media/slide/巴旦木.jpg
+Python's Books/Django+Vue.js 实战派Python Web开发与运维/chap08/myshop-api/media/slide/红枣副本.jpg
+Python's Books/Django+Vue.js 实战派Python Web开发与运维/chap08/myshop-api/media/slide/葡萄干.jpg
+Python's Books/Django+Vue.js 实战派Python Web开发与运维/chap08/myshop-api/media/upload/2021/07/19/9f7a02ae_thumb.jpg
+Python's Books/Django+Vue.js 实战派Python Web开发与运维/chap08/myshop-api/media/upload/2021/07/19/9f7a02ae.jpg
+Python's Books/Django+Vue.js 实战派Python Web开发与运维/chap08/myshop-api/media/uploads/9f7a02ae_9ZKQhQo.jpg
+Python's Books/Django+Vue.js 实战派Python Web开发与运维/chap08/myshop-api/media/uploads/9f7a02ae_AuRz4a8.jpg
+Python's Books/Django+Vue.js 实战派Python Web开发与运维/chap08/myshop-api/media/uploads/9f7a02ae_bq2OitG.jpg
+Python's Books/Django+Vue.js 实战派Python Web开发与运维/chap08/myshop-api/media/uploads/9f7a02ae_RZJsPwx.jpg
+Python's Books/Django+Vue.js 实战派Python Web开发与运维/chap08/myshop-api/media/uploads/9f7a02ae_tqzcqh7.jpg
+Python's Books/Django+Vue.js 实战派Python Web开发与运维/chap08/myshop-api/media/uploads/9f7a02ae_UtXUQ5j.jpg
+Python's Books/Django+Vue.js 实战派Python Web开发与运维/chap08/myshop-api/media/uploads/9f7a02ae_Yk5apZ2.jpg
+Python's Books/Django+Vue.js 实战派Python Web开发与运维/chap08/myshop-api/media/uploads/9f7a02ae.jpg
+Python's Books/Django+Vue.js 实战派Python Web开发与运维/chap08/myshop-api/media/uploads/94a5a43c5fc94cd481e5ba4c1a9ad873.jpg
+Python's Books/Django+Vue.js 实战派Python Web开发与运维/chap08/myshop-api/media/uploads/app_pay.jpg
+Python's Books/Django+Vue.js 实战派Python Web开发与运维/chap08/myshop-api/media/uploads/button001_DgYCM6Y.png
+Python's Books/Django+Vue.js 实战派Python Web开发与运维/chap08/myshop-api/media/uploads/button001_Iipje2r.png
+Python's Books/Django+Vue.js 实战派Python Web开发与运维/chap08/myshop-api/media/uploads/button001_JyoMao3.png
+Python's Books/Django+Vue.js 实战派Python Web开发与运维/chap08/myshop-api/media/uploads/button001_PsOE8La.png
+Python's Books/Django+Vue.js 实战派Python Web开发与运维/chap08/myshop-api/media/uploads/button001_QhyCdmQ.png
+Python's Books/Django+Vue.js 实战派Python Web开发与运维/chap08/myshop-api/media/uploads/button001.png
+Python's Books/Django+Vue.js 实战派Python Web开发与运维/chap08/myshop-api/media/uploads/logo.jpg
+Python's Books/Django+Vue.js 实战派Python Web开发与运维/chap08/myshop-api/media/uploads/水银.png
+Python's Books/Django+Vue.js 实战派Python Web开发与运维/chap08/myshop-api/media/uploads/goods_img/9f7a02ae_pe2sFft.jpg
+Python's Books/Django+Vue.js 实战派Python Web开发与运维/chap08/myshop-api/media/uploads/goods_img/9f7a02ae_PhEoNXG.jpg
+Python's Books/Django+Vue.js 实战派Python Web开发与运维/chap08/myshop-api/media/uploads/goods_img/9f7a02ae.jpg
+Python's Books/Django+Vue.js 实战派Python Web开发与运维/chap08/myshop-api/media/uploads/goods_img/1499480502855834478.jpg
+Python's Books/Django+Vue.js 实战派Python Web开发与运维/chap08/myshop-api/media/uploads/goods_img/test_6BflRSo.jpg
+Python's Books/Django+Vue.js 实战派Python Web开发与运维/chap08/myshop-api/media/uploads/goods_img/test_cz5ppzc.jpg
+Python's Books/Django+Vue.js 实战派Python Web开发与运维/chap08/myshop-api/media/uploads/goods_img/test_JVl6P6B.jpg
+Python's Books/Django+Vue.js 实战派Python Web开发与运维/chap08/myshop-api/media/uploads/goods_img/test_MG3oJjn.jpg
+Python's Books/Django+Vue.js 实战派Python Web开发与运维/chap08/myshop-api/media/uploads/goods_img/test.jpg
+Python's Books/Django+Vue.js 实战派Python Web开发与运维/chap08/myshop-api/media/uploads/goods_img/哈密大枣_BqfS3d5.jpg
+Python's Books/Django+Vue.js 实战派Python Web开发与运维/chap08/myshop-api/media/uploads/goods_img/哈密大枣_F0QRhRq.jpg
+Python's Books/Django+Vue.js 实战派Python Web开发与运维/chap08/myshop-api/media/uploads/goods_img/哈密大枣_FbyMTqn.jpg
+Python's Books/Django+Vue.js 实战派Python Web开发与运维/chap08/myshop-api/media/uploads/goods_img/哈密大枣_GoAShEc.jpg
+Python's Books/Django+Vue.js 实战派Python Web开发与运维/chap08/myshop-api/media/uploads/goods_img/哈密大枣_HpE6sWV.jpg
+Python's Books/Django+Vue.js 实战派Python Web开发与运维/chap08/myshop-api/media/uploads/goods_img/哈密大枣_hwxUFmq.jpg
+Python's Books/Django+Vue.js 实战派Python Web开发与运维/chap08/myshop-api/media/uploads/goods_img/哈密大枣_I0FuDlS.jpg
+Python's Books/Django+Vue.js 实战派Python Web开发与运维/chap08/myshop-api/media/uploads/goods_img/哈密大枣_imHLnoL.jpg
+Python's Books/Django+Vue.js 实战派Python Web开发与运维/chap08/myshop-api/media/uploads/goods_img/哈密大枣_NCz0pSU.jpg
+Python's Books/Django+Vue.js 实战派Python Web开发与运维/chap08/myshop-api/media/uploads/goods_img/哈密大枣_VQK7ufL.jpg
+Python's Books/Django+Vue.js 实战派Python Web开发与运维/chap08/myshop-api/media/uploads/goods_img/哈密大枣.jpg
+Python's Books/Django+Vue.js 实战派Python Web开发与运维/chap08/myshop-api/media/uploads/goods_img/巴旦木1.jpg
+Python's Books/Django+Vue.js 实战派Python Web开发与运维/chap08/myshop-api/media/uploads/goods_img/红枣副本1.jpg
+Python's Books/Django+Vue.js 实战派Python Web开发与运维/chap08/myshop-api/media/uploads/goods_img/葡萄干1.jpg
+Python's Books/Django+Vue.js 实战派Python Web开发与运维/chap08/myshop-api/media/user_img/9f7a02ae_5GtvyaH.jpg
+Python's Books/Django+Vue.js 实战派Python Web开发与运维/chap08/myshop-api/media/user_img/9f7a02ae_qREiJjh.jpg
+Python's Books/Django+Vue.js 实战派Python Web开发与运维/chap08/myshop-api/media/user_img/9f7a02ae_uMHN6IP.jpg
+Python's Books/Django+Vue.js 实战派Python Web开发与运维/chap08/myshop-api/media/user_img/9f7a02ae_ZVzmLpM.jpg
+Python's Books/Django+Vue.js 实战派Python Web开发与运维/chap08/myshop-api/media/user_img/9f7a02ae.jpg
+Python's Books/Django+Vue.js 实战派Python Web开发与运维/chap08/myshop-api/media/user_img/94a5a43c5fc94cd481e5ba4c1a9ad873_kX4wvKX.jpg
+Python's Books/Django+Vue.js 实战派Python Web开发与运维/chap08/myshop-api/media/user_img/94a5a43c5fc94cd481e5ba4c1a9ad873.jpg
+Python's Books/Django+Vue.js 实战派Python Web开发与运维/chap08/myshop-api/media/user_img/哈密大枣.jpg
